# pyuniclass

./: .gitignore  README.md  pyproject.toml
src/pyuniclass/: __init__.py  pyuniclass.py
src/pyuniclass/data/: README.txt  Uniclass2015-change-log-2022-07.xlsx  Uniclass2015-change-log-2024-04.xlsx  Uniclass2015-codes-not-in-use-2024-04.xlsx  Uniclass2015_Ac_v1_18.xlsx  Uniclass2015_Ac_v1_22.xlsx  Uniclass2015_Co_v1_16.xlsx  Uniclass2015_Co_v1_21.xlsx  Uniclass2015_EF_v1_12.xlsx  Uniclass2015_EF_v1_15.xlsx  Uniclass2015_En_v1_25.xlsx  Uniclass2015_En_v1_31.xlsx  Uniclass2015_FI_v1_4.xlsx  Uniclass2015_FI_v1_5.xlsx  Uniclass2015_Ma_v1_1.xlsx  Uniclass2015_PC_v1_2.xlsx  Uniclass2015_PM_v1_17.xlsx  Uniclass2015_PM_v1_24.xlsx  Uniclass2015_Pr_v1_27.xlsx  Uniclass2015_Pr_v1_34.xlsx  Uniclass2015_RK_v1_0.xlsx  Uniclass2015_Ro_v1_5.xlsx  Uniclass2015_Ro_v1_8.xlsx  Uniclass2015_SL_v1_24.xlsx  Uniclass2015_Ss_v1_27.xlsx  Uniclass2015_Ss_v1_34.xlsx  Uniclass2015_TE_v1_13.xlsx  Uniclass2015_TE_v1_16.xlsx  Uniclass2015_Zz_v1_1.xlsx  Uniclass2015_Zz_v1_2.xlsx
tests/: test_pyuniclass.py
